
BACKEND
	Added: Dedicated package for remote SQL server
	Added: NAMED_BNAME (named binary name) configuration parameter - Named (Bind9) server impl.
	Fixed: POP3 SSL and IMAP SSL services must be disabled when SSL is disabled for the services - Courier server impl.
	Fixed: The .my.cnf file is no longer used and thus, must be removed

CONFIGS
	Added: mysql.data configuration file
	Added: percona 5.5/5.6 in Debian Jessie package file
	Added: percona 5.5/5.6 in Ubuntu Vivid Vervet package file

FRONTEND
	Fixed: Domain limit is not updated when a domain is being deleted (reseller level)
	Fixed: Opcode cache must be cleared when the languages index is rebuilt

YOUTRACK
	Fixed: #IP-1362: Incorrect PHP temporary directory path in subdomain's vhost files - Apache2 ITK server impl.
	Fixed: #IP-1363: Unable to suspend customer account
	Fixed: #IP-1364: Custom DNS records are lost when editing domain properties

------------------------------------------------------------------------------------------------------------------------
1.2.8
------------------------------------------------------------------------------------------------------------------------

2015-06-20: Laurent Declercq
	RELEASE i-MSCP 1.2.8

BACKEND
	Fixed: Unable to disable domain name (Apache2 FCGID server implementation)

------------------------------------------------------------------------------------------------------------------------
1.2.7
------------------------------------------------------------------------------------------------------------------------

2015-06-19: Laurent Declercq
	RELEASE i-MSCP 1.2.7

BACKEND
	Fixed: BASE_SERVER_VHOST placeholder is not replaced in vhost files (httpd server implementations)
	Fixed: Unable to delete domain alias - Can't locate object method _getSharedMountPoints via package Modules::Alias
	Fixed: Unable to delete subdomain - Can't locate object method _getSharedMountPoints via package Modules::Subdomain
